--- a/op_chains_tracking/l2_revenue_tracking.ipynb
+++ b/op_chains_tracking/l2_revenue_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,33 +46,54 @@
     "\n",
     "chains_rpcs = [\n",
     "        ['op mainnet', op_node],\n",
-    "        ['base', 'https://mainnet.base.org'],\n",
-    "        ['zora network', 'https://rpc.zora.energy'],\n",
-    "        ['public goods network', 'https://rpc.publicgoods.network'],\n",
+    "        ['base', 'https://mainnet.base.org/'],\n",
+    "        ['zora network', 'https://rpc.zora.energy/'],\n",
+    "        ['public goods network', 'https://rpc.publicgoods.network/'],\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "op mainnet | SequencerFeeVault: Proxy 804379218602095682779\n",
-      "op mainnet | BaseFeeVault: Proxy 151768297000984959782\n",
-      "op mainnet | L1FeeVault: Proxy 2379284741915407004776\n",
-      "base | SequencerFeeVault: Proxy 0\n",
-      "base | BaseFeeVault: Proxy 15636799320591736912\n",
-      "base | L1FeeVault: Proxy 522816712785375471781\n",
-      "zora network | SequencerFeeVault: Proxy 75843159204056624057\n",
-      "zora network | BaseFeeVault: Proxy 0\n",
-      "zora network | L1FeeVault: Proxy 46301942158246889740\n",
-      "public goods network | SequencerFeeVault: Proxy 0\n",
-      "public goods network | BaseFeeVault: Proxy 0\n",
-      "public goods network | L1FeeVault: Proxy 0\n"
+      "Method ID: 0x84411d65\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the method signature hash (this step is optional if you already know the hash)\n",
+    "method_signature = \"totalProcessed()\"\n",
+    "method_id = Web3.keccak(text=method_signature)[:4].hex()\n",
+    "# Verify the method ID (this step is also optional, but useful for debugging)\n",
+    "print(f\"Method ID: {method_id}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "op mainnet | SequencerFeeVault: 804379218602095682779\n",
+      "op mainnet | BaseFeeVault: 151768297000984959782\n",
+      "op mainnet | L1FeeVault: 2379284741915407004776\n",
+      "base | SequencerFeeVault: 0\n",
+      "base | BaseFeeVault: 15636799320591736912\n",
+      "base | L1FeeVault: 522816712785375471781\n",
+      "zora network | SequencerFeeVault: 85847302078349861393\n",
+      "zora network | BaseFeeVault: 0\n",
+      "zora network | L1FeeVault: 56304557190846546372\n",
+      "public goods network | SequencerFeeVault: 0\n",
+      "public goods network | BaseFeeVault: 0\n",
+      "public goods network | L1FeeVault: 0\n"
      ]
     }
    ],
@@ -87,13 +108,21 @@
     "        vault_abi = json.loads(vault[2])\n",
     "        implementation_abi = json.loads(vault[3])\n",
     "\n",
-    "        implementation_contract = w3py.get_implementation_contract(w3_conn, vault_address, vault_abi)\n",
-    "        time.sleep(1)\n",
-    "        proxy_balance = w3_conn.eth.contract(address=vault_address, abi=implementation_abi)\n",
-    "        # implementation_balance = w3_conn.eth.contract(address=implementation_contract, abi=implementation_abi)\n",
-    "        time.sleep(1)\n",
-    "        proxy_processed = proxy_balance.functions.totalProcessed().call()\n",
-    "        print(chain_name + ' | ' + vault_name + ': Proxy ' + str(proxy_processed))\n",
+    "        # Call the function directly using eth_call\n",
+    "        response = w3_conn.eth.call({\n",
+    "            'to': vault_address,\n",
+    "            'data': method_id\n",
+    "        })\n",
+    "        # Decode the result (assuming the function returns a uint256)\n",
+    "        proxy_processed = Web3.to_int(hexstr=response.hex())\n",
+    "\n",
+    "        # implementation_contract = w3py.get_implementation_contract(w3_conn, vault_address, vault_abi)\n",
+    "        # time.sleep(1)\n",
+    "        # proxy_balance = w3_conn.eth.contract(address=vault_address, abi=implementation_abi)\n",
+    "        # # implementation_balance = w3_conn.eth.contract(address=implementation_contract, abi=implementation_abi)\n",
+    "        # time.sleep(1)\n",
+    "        # proxy_processed = proxy_balance.functions.totalProcessed().call()\n",
+    "        print(chain_name + ' | ' + vault_name + ': ' + str(proxy_processed))\n",
     "        time.sleep(1)"
    ]
   },
