--- a/contracts_tracking/get_runtime_bytecode_snippet.ipynb
+++ b/contracts_tracking/get_runtime_bytecode_snippet.ipynb
@@ -25,21 +25,28 @@
     "#         ,'latestOutputIndex()'\n",
     "#         ,'nextOutputIndex()'\n",
     "# ]\n",
-    "token_signatures = [\n",
-    "    #all\n",
-    "     'totalSupply()'\n",
-    "    ,'balanceOf(address)'\n",
-    "    ,'transferFrom(address,address,uint256)'\n",
-    "    #erc20 and others\n",
-    "    ,'transfer(address,uint256)'\n",
-    "    #erc721 and others\n",
-    "    ,'safeTransferFrom(address,address,uint256,bytes)'\n",
-    "    ,'ownerOf(uint256)'\n",
-    "    #erc1155\n",
-    "    ,'safeTransferFrom(address,address,uint256,uint256,bytes)'\n",
-    "    ,'safeBatchTransferFrom(address,address,uint256[],uint256[],bytes)'\n",
-    "    ,'balanceOf(address,uint256)'\n",
-    "]"
+    "# token_signatures = [\n",
+    "#     #all\n",
+    "#      'totalSupply()'\n",
+    "#     ,'balanceOf(address)'\n",
+    "#     ,'transferFrom(address,address,uint256)'\n",
+    "#     #erc20 and others\n",
+    "#     ,'transfer(address,uint256)'\n",
+    "#     #erc721 and others\n",
+    "#     ,'safeTransferFrom(address,address,uint256,bytes)'\n",
+    "#     ,'ownerOf(uint256)'\n",
+    "#     #erc1155\n",
+    "#     ,'safeTransferFrom(address,address,uint256,uint256,bytes)'\n",
+    "#     ,'safeBatchTransferFrom(address,address,uint256[],uint256[],bytes)'\n",
+    "#     ,'balanceOf(address,uint256)'\n",
+    "# ]\n",
+    "proxy_sig = [\n",
+    "     '_implementation()'\n",
+    "    ,'_getImplementation()'\n",
+    "    ,'_upgradeTo(address)'\n",
+    "]\n",
+    "\n",
+    "arr = proxy_sig"
    ]
   },
   {
@@ -53,13 +60,9 @@
      "text": [
       "format for sql query\n",
       "\n",
-      "('totalSupply()', 0x18160ddd),\n",
-      "('balanceOf(address)', 0x70a08231),\n",
-      "('transfer(address,uint256)', 0xa9059cbb),\n",
-      "('safeTransferFrom(address,address,uint256,bytes)', 0xb88d4fde),\n",
-      "('transferFrom(address,address,uint256)', 0x23b872dd),\n",
-      "('safeTransferFrom(address,address,uint256,uint256,bytes)', 0xf242432a),\n",
-      "('safeBatchTransferFrom(address,address,uint256[],uint256[],bytes)', 0x2eb2c2d6)\n"
+      "('_implementation()', 0x59679b0f),\n",
+      "('_getImplementation()', 0x42404e07),\n",
+      "('_upgradeTo(address)', 0x34140748)\n"
      ]
     }
    ],
@@ -68,7 +71,7 @@
     "opcode = ''\n",
     "test_arr = []\n",
     "\n",
-    "for sig in token_signatures:\n",
+    "for sig in arr:\n",
     "        sig = sig.replace(\" \", \"\") #replace spaces\n",
     "        bytecode = w3py.get_bytecode_pattern(endpoint, sig, opcode)\n",
     "        test_arr.append([sig,bytecode])\n",
