--- a/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
+++ b/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
@@ -107,6 +107,7 @@
     "        [\"stargate\", \"stargate finance\"],\n",
     "        [\"sushi-trident\", \"sushi\"],\n",
     "        [\"yearn-finance\", \"yearn\"],\n",
+    "        [\"lyra\", \"lyra finance\"],\n",
     "    ],\n",
     "    columns=[\"slug\", \"app_name\"],\n",
     ")\n",
