--- a/contracts_tracking/get_evm_topic0.ipynb
+++ b/contracts_tracking/get_evm_topic0.ipynb
@@ -16,37 +16,14 @@
     "load_dotenv()\n",
     "import os\n",
     "\n",
-    "endpoint = os.environ[\"OP_NODE\"]\n",
-    "\n",
-    "# l2_output_signatures = [\n",
-    "#         'getL2Output(uint256)'\n",
-    "#         ,'getL2OutputIndexAfter(uint256)'\n",
-    "#         ,'getL2OutputAfter(uint256)'\n",
-    "#         ,'latestOutputIndex()'\n",
-    "#         ,'nextOutputIndex()'\n",
-    "# ]\n",
-    "# token_signatures = [\n",
-    "#     #all\n",
-    "#      'totalSupply()'\n",
-    "#     ,'balanceOf(address)'\n",
-    "#     ,'transferFrom(address,address,uint256)'\n",
-    "#     #erc20 and others\n",
-    "#     ,'transfer(address,uint256)'\n",
-    "#     #erc721 and others\n",
-    "#     ,'safeTransferFrom(address,address,uint256,bytes)'\n",
-    "#     ,'ownerOf(uint256)'\n",
-    "#     #erc1155\n",
-    "#     ,'safeTransferFrom(address,address,uint256,uint256,bytes)'\n",
-    "#     ,'safeBatchTransferFrom(address,address,uint256[],uint256[],bytes)'\n",
-    "#     ,'balanceOf(address,uint256)'\n",
-    "# ]\n",
-    "proxy_sig = [\n",
-    "     '_implementation()'\n",
-    "    ,'_getImplementation()'\n",
-    "    ,'_upgradeTo(address)'\n",
+    "token_events = [\n",
+    "     'Transfer(from, to, tokenId)'\n",
+    "    ,'Approval(owner, approved, tokenId)'\n",
+    "    ,'ApprovalForAll(owner, operator, approved)'\n",
     "]\n",
     "\n",
-    "arr = proxy_sig"
+    "\n",
+    "arr = token_events"
    ]
   },
   {
@@ -60,20 +37,19 @@
      "text": [
       "format for sql query\n",
       "\n",
-      "('_implementation()', 0x59679b0f),\n",
-      "('_getImplementation()', 0x42404e07),\n",
-      "('_upgradeTo(address)', 0x34140748)\n"
+      "('Transfer(from,to,tokenId)', 0xb9296e39),\n",
+      "('Approval(owner,approved,tokenId)', 0x08c9cb98),\n",
+      "('ApprovalForAll(owner,operator,approved)', 0x20b3ccab)\n"
      ]
     }
    ],
    "source": [
-    "# opcode = 'PUSH4'\n",
-    "opcode = ''\n",
+    "\n",
     "test_arr = []\n",
     "\n",
     "for sig in arr:\n",
     "        sig = sig.replace(\" \", \"\") #replace spaces\n",
-    "        bytecode = w3py.get_bytecode_pattern(endpoint, sig, opcode)\n",
+    "        bytecode = w3py.generate_ethereum_event_signature_hash(sig)\n",
     "        test_arr.append([sig,bytecode])\n",
     "\n",
     "formatted_arr = []\n",
