--- a/contracts_tracking/get_evm_topic0.ipynb
+++ b/contracts_tracking/get_evm_topic0.ipynb
@@ -17,9 +17,9 @@
     "import os\n",
     "\n",
     "token_events = [\n",
-    "     'Transfer(from, to, tokenId)'\n",
-    "    ,'Approval(owner, approved, tokenId)'\n",
-    "    ,'ApprovalForAll(owner, operator, approved)'\n",
+    "     'Transfer(address, address, uint256)'\n",
+    "    ,'Approval(address, approved, uint256)'\n",
+    "    ,'ApprovalForAll(address, address, bool)'\n",
     "]\n",
     "\n",
     "\n",
@@ -37,9 +37,9 @@
      "text": [
       "format for sql query\n",
       "\n",
-      "('Transfer(from,to,tokenId)', 0xb9296e39),\n",
-      "('Approval(owner,approved,tokenId)', 0x08c9cb98),\n",
-      "('ApprovalForAll(owner,operator,approved)', 0x20b3ccab)\n"
+      "('Transfer(address,address,uint256)', 0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef),\n",
+      "('Approval(address,approved,uint256)', 0x6d14f43f7c92c56c42049dba8563afce1f060f72cbcdc236a3565ede6517496a),\n",
+      "('ApprovalForAll(address,address,bool)', 0x17307eab39ab6107e8899845ad3d59bd9653f200f220920489ca2b5937696c31)\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
     "\n",
     "for item in test_arr:\n",
     "    function_name = item[0]\n",
-    "    opcode = item[1].replace(\"'0x\", \"0x\")  # Remove the '0x' prefix\n",
+    "    opcode = item[1]#.replace(\"'0x\", \"0x\")  # Remove the '0x' prefix\n",
     "    formatted_arr.append(f\"('{function_name}', {opcode})\")\n",
     "\n",
     "# Join the formatted array using commas\n",
