rev tracking current

--- a/op_chains_tracking/l2_revenue_tracking.ipynb
+++ b/op_chains_tracking/l2_revenue_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "sys.path.append(\"../helper_functions\")\n",
     "import web3py_utils as w3py\n",
     "from web3 import Web3\n",
+    "from datetime import datetime\n",
     "sys.path.pop()\n",
     "\n",
     "import dotenv\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,33 +78,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "op mainnet | SequencerFeeVault: 804379218602095682779\n",
-      "op mainnet | BaseFeeVault: 151768297000984959782\n",
-      "op mainnet | L1FeeVault: 2379284741915407004776\n",
-      "base | SequencerFeeVault: 0\n",
-      "base | BaseFeeVault: 15636799320591736912\n",
-      "base | L1FeeVault: 522816712785375471781\n",
-      "zora network | SequencerFeeVault: 85847302078349861393\n",
-      "zora network | BaseFeeVault: 0\n",
-      "zora network | L1FeeVault: 56304557190846546372\n",
-      "public goods network | SequencerFeeVault: 0\n",
-      "public goods network | BaseFeeVault: 0\n",
-      "public goods network | L1FeeVault: 0\n"
+      "op mainnet | SequencerFeeVault: 1063857200132073207047 | bal: 82376100952118272230 | total eth: 1146.2333010841915\n",
+      "op mainnet | BaseFeeVault: 222912724643847907088 | bal: 20392456810467963761 | total eth: 243.30518145431589\n",
+      "op mainnet | L1FeeVault: 3399092561901994272487 | bal: 255457858211431307642 | total eth: 3654.550420113426\n",
+      "base | SequencerFeeVault: 0 | bal: 1592226812674042681250 | total eth: 1592.2268126740428\n",
+      "base | BaseFeeVault: 0 | bal: 313546600296213013621 | total eth: 313.546600296213\n",
+      "base | L1FeeVault: 0 | bal: 1024889444834256072415 | total eth: 1024.889444834256\n",
+      "zora network | SequencerFeeVault: 136818362420691232282 | bal: 8764192591641859593 | total eth: 145.5825550123331\n",
+      "zora network | BaseFeeVault: 0 | bal: 17556323329982 | total eth: 1.7556323329982e-05\n",
+      "zora network | L1FeeVault: 108743413917044646187 | bal: 8962951415768408784 | total eth: 117.70636533281305\n",
+      "public goods network | SequencerFeeVault: 0 | bal: 4924113878063664749 | total eth: 4.9241138780636655\n",
+      "public goods network | BaseFeeVault: 0 | bal: 173208006150 | total eth: 1.7320800615e-07\n",
+      "public goods network | L1FeeVault: 0 | bal: 2816390833465498437 | total eth: 2.8163908334654986\n"
      ]
     }
    ],
    "source": [
+    "data_arr = []\n",
+    "\n",
     "for chain in chains_rpcs:\n",
     "    chain_name = chain[0]\n",
     "    rpc = chain[1]\n",
     "    w3_conn = Web3(Web3.HTTPProvider(rpc))\n",
+    "    # Get the timestamp of the latest block\n",
+    "    block_timestamp = w3_conn.eth.get_block('latest').timestamp\n",
+    "    block_number = w3_conn.eth.get_block('latest').number\n",
+    "    # Convert the UNIX timestamp to a human-readable format\n",
+    "    block_time = datetime.utcfromtimestamp(block_timestamp).strftime('%Y-%m-%d %H:%M:%S')\n",
+    "\n",
     "    for vault in fee_vaults:\n",
     "        vault_name = vault[0]\n",
     "        vault_address = vault[1]\n",
@@ -115,25 +124,199 @@
     "            'to': vault_address,\n",
     "            'data': method_id\n",
     "        })\n",
+    "        wei_balance = w3_conn.eth.get_balance(vault_address)\n",
     "        # Decode the result (assuming the function returns a uint256)\n",
-    "        proxy_processed = Web3.to_int(hexstr=response.hex())\n",
+    "        proxy_processed_wei = Web3.to_int(hexstr=response.hex())\n",
+    "        \n",
+    "        alltime_revenue_wei = proxy_processed_wei+wei_balance\n",
+    "        alltime_revenue_eth = alltime_revenue_wei/1e18\n",
     "\n",
-    "        # implementation_contract = w3py.get_implementation_contract(w3_conn, vault_address, vault_abi)\n",
-    "        # time.sleep(1)\n",
-    "        # proxy_balance = w3_conn.eth.contract(address=vault_address, abi=implementation_abi)\n",
-    "        # # implementation_balance = w3_conn.eth.contract(address=implementation_contract, abi=implementation_abi)\n",
-    "        # time.sleep(1)\n",
-    "        # proxy_processed = proxy_balance.functions.totalProcessed().call()\n",
-    "        print(chain_name + ' | ' + vault_name + ': ' + str(proxy_processed))\n",
-    "        time.sleep(1)"
+    "        print(chain_name + ' | ' + vault_name + ': ' \\\n",
+    "              + str(proxy_processed_wei) + ' | bal: ' + str(wei_balance)\\\n",
+    "              + ' | total eth: ' + str( (alltime_revenue_eth) )\n",
+    "              )\n",
+    "        \n",
+    "        tmp = pd.DataFrame(\n",
+    "                [[block_time, block_number, chain_name, vault_name, vault_address, alltime_revenue_eth]]\n",
+    "                ,columns =['block_time','block_number','chain_name','valut_name','vault_address','alltime_revenue_eth']\n",
+    "                )\n",
+    "        data_arr.append(tmp)\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "data_df = pd.concat(data_arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>block_time</th>\n",
+       "      <th>chain_name</th>\n",
+       "      <th>valut_name</th>\n",
+       "      <th>vault_address</th>\n",
+       "      <th>alltime_revenue_eth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-09-01 21:33:33</td>\n",
+       "      <td>op mainnet</td>\n",
+       "      <td>SequencerFeeVault</td>\n",
+       "      <td>0x4200000000000000000000000000000000000011</td>\n",
+       "      <td>1.146233e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-09-01 21:33:33</td>\n",
+       "      <td>op mainnet</td>\n",
+       "      <td>BaseFeeVault</td>\n",
+       "      <td>0x4200000000000000000000000000000000000019</td>\n",
+       "      <td>2.433052e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-09-01 21:33:33</td>\n",
+       "      <td>op mainnet</td>\n",
+       "      <td>L1FeeVault</td>\n",
+       "      <td>0x420000000000000000000000000000000000001A</td>\n",
+       "      <td>3.654550e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-09-01 21:33:39</td>\n",
+       "      <td>base</td>\n",
+       "      <td>SequencerFeeVault</td>\n",
+       "      <td>0x4200000000000000000000000000000000000011</td>\n",
+       "      <td>1.592227e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-09-01 21:33:39</td>\n",
+       "      <td>base</td>\n",
+       "      <td>BaseFeeVault</td>\n",
+       "      <td>0x4200000000000000000000000000000000000019</td>\n",
+       "      <td>3.135466e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-09-01 21:33:39</td>\n",
+       "      <td>base</td>\n",
+       "      <td>L1FeeVault</td>\n",
+       "      <td>0x420000000000000000000000000000000000001A</td>\n",
+       "      <td>1.024889e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-09-01 21:33:43</td>\n",
+       "      <td>zora network</td>\n",
+       "      <td>SequencerFeeVault</td>\n",
+       "      <td>0x4200000000000000000000000000000000000011</td>\n",
+       "      <td>1.455826e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-09-01 21:33:43</td>\n",
+       "      <td>zora network</td>\n",
+       "      <td>BaseFeeVault</td>\n",
+       "      <td>0x4200000000000000000000000000000000000019</td>\n",
+       "      <td>1.755632e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-09-01 21:33:43</td>\n",
+       "      <td>zora network</td>\n",
+       "      <td>L1FeeVault</td>\n",
+       "      <td>0x420000000000000000000000000000000000001A</td>\n",
+       "      <td>1.177064e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-09-01 21:33:47</td>\n",
+       "      <td>public goods network</td>\n",
+       "      <td>SequencerFeeVault</td>\n",
+       "      <td>0x4200000000000000000000000000000000000011</td>\n",
+       "      <td>4.924114e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-09-01 21:33:47</td>\n",
+       "      <td>public goods network</td>\n",
+       "      <td>BaseFeeVault</td>\n",
+       "      <td>0x4200000000000000000000000000000000000019</td>\n",
+       "      <td>1.732080e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-09-01 21:33:47</td>\n",
+       "      <td>public goods network</td>\n",
+       "      <td>L1FeeVault</td>\n",
+       "      <td>0x420000000000000000000000000000000000001A</td>\n",
+       "      <td>2.816391e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            block_time            chain_name         valut_name  \\\n",
+       "0  2023-09-01 21:33:33            op mainnet  SequencerFeeVault   \n",
+       "0  2023-09-01 21:33:33            op mainnet       BaseFeeVault   \n",
+       "0  2023-09-01 21:33:33            op mainnet         L1FeeVault   \n",
+       "0  2023-09-01 21:33:39                  base  SequencerFeeVault   \n",
+       "0  2023-09-01 21:33:39                  base       BaseFeeVault   \n",
+       "0  2023-09-01 21:33:39                  base         L1FeeVault   \n",
+       "0  2023-09-01 21:33:43          zora network  SequencerFeeVault   \n",
+       "0  2023-09-01 21:33:43          zora network       BaseFeeVault   \n",
+       "0  2023-09-01 21:33:43          zora network         L1FeeVault   \n",
+       "0  2023-09-01 21:33:47  public goods network  SequencerFeeVault   \n",
+       "0  2023-09-01 21:33:47  public goods network       BaseFeeVault   \n",
+       "0  2023-09-01 21:33:47  public goods network         L1FeeVault   \n",
+       "\n",
+       "                                vault_address  alltime_revenue_eth  \n",
+       "0  0x4200000000000000000000000000000000000011         1.146233e+03  \n",
+       "0  0x4200000000000000000000000000000000000019         2.433052e+02  \n",
+       "0  0x420000000000000000000000000000000000001A         3.654550e+03  \n",
+       "0  0x4200000000000000000000000000000000000011         1.592227e+03  \n",
+       "0  0x4200000000000000000000000000000000000019         3.135466e+02  \n",
+       "0  0x420000000000000000000000000000000000001A         1.024889e+03  \n",
+       "0  0x4200000000000000000000000000000000000011         1.455826e+02  \n",
+       "0  0x4200000000000000000000000000000000000019         1.755632e-05  \n",
+       "0  0x420000000000000000000000000000000000001A         1.177064e+02  \n",
+       "0  0x4200000000000000000000000000000000000011         4.924114e+00  \n",
+       "0  0x4200000000000000000000000000000000000019         1.732080e-07  \n",
+       "0  0x420000000000000000000000000000000000001A         2.816391e+00  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(data_df)"
+   ]
   }
  ],
  "metadata": {
