--- a/op_chains_tracking/l2_revenue_tracking.ipynb
+++ b/op_chains_tracking/l2_revenue_tracking.ipynb
@@ -18,10 +18,7 @@
     "from datetime import datetime\n",
     "sys.path.pop()\n",
     "\n",
-    "import dotenv\n",
-    "import os\n",
-    "dotenv.load_dotenv()\n",
-    "op_node = os.environ[\"OP_NODE\"]"
+    "import os"
    ]
   },
   {
