--- a/op_chains_tracking/l2_revenue_tracking.ipynb
+++ b/op_chains_tracking/l2_revenue_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,17 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['op mainnet', ' https://mainnet.optimism.io', ' ETH', ' ethereum', ' yes'], ['base', ' https://mainnet.base.org/', ' ETH', ' ethereum', ' yes'], ['zora network', ' https://rpc.zora.energy/', ' ETH', ' ethereum', ' yes'], ['public goods network', ' https://rpc.publicgoods.network/', ' ETH', ' ethereum', ' yes'], ['aevo network', ' https://api.aevo.xyz', ' ETH', ' ethereum', ' no'], ['opbnb', ' https://opbnb-mainnet-rpc.bnbchain.org', ' BNB', ' bnb', ' no']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# https://github.com/ethereum-optimism/optimism/blob/b86522036ad11a91de1d1dadb6805167add83326/specs/predeploys.md?plain=1#L50\n",
     "\n",
@@ -60,17 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Method ID: 0x84411d65\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the method signature hash (this step is optional if you already know the hash)\n",
     "method_signature = \"totalProcessed()\"\n",
@@ -83,31 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "op mainnet | SequencerFeeVault: 1063857200132073207047 | bal: 109326973996315601597 | total eth: 1173.1841741283888\n",
-      "op mainnet | BaseFeeVault: 222912724643847907088 | bal: 20392493836299784566 | total eth: 243.3052184801477\n",
-      "op mainnet | L1FeeVault: 3399092561901994272487 | bal: 309336338723387708329 | total eth: 3708.428900625382\n",
-      "base | SequencerFeeVault: 1592801383437017825498 | bal: 40952371978868248420 | total eth: 1633.7537554158862\n",
-      "base | BaseFeeVault: 314161722455325783336 | bal: 34452712700799383389 | total eth: 348.6144351561252\n",
-      "base | L1FeeVault: 1025424229958661395932 | bal: 45390785723705809357 | total eth: 1070.8150156823672\n",
-      "zora network | SequencerFeeVault: 156833819511677884835 | bal: 328580996071941092 | total eth: 157.16240050774982\n",
-      "zora network | BaseFeeVault: 0 | bal: 19695625923426 | total eth: 1.9695625923426e-05\n",
-      "zora network | L1FeeVault: 118743562764297720407 | bal: 8767306578428756680 | total eth: 127.51086934272647\n",
-      "public goods network | SequencerFeeVault: 0 | bal: 4973593772817971339 | total eth: 4.9735937728179715\n",
-      "public goods network | BaseFeeVault: 0 | bal: 175978913250 | total eth: 1.7597891325e-07\n",
-      "public goods network | L1FeeVault: 0 | bal: 2831558137967423344 | total eth: 2.8315581379674235\n",
-      "opbnb | SequencerFeeVault: 0 | bal: 108700528209269289358 | total eth: 108.7005282092693\n",
-      "opbnb | BaseFeeVault: 0 | bal: 1177077853805 | total eth: 1.177077853805e-06\n",
-      "opbnb | L1FeeVault: 0 | bal: 26370855882266783144 | total eth: 26.370855882266785\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_arr = []\n",
     "\n",
@@ -162,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,298 +144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>block_time</th>\n",
-       "      <th>block_number</th>\n",
-       "      <th>chain_name</th>\n",
-       "      <th>vault_name</th>\n",
-       "      <th>vault_address</th>\n",
-       "      <th>alltime_revenue_native</th>\n",
-       "      <th>gas_token</th>\n",
-       "      <th>da_layer</th>\n",
-       "      <th>is_superchain_registry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-09-05 16:28:19</td>\n",
-       "      <td>109166261</td>\n",
-       "      <td>op mainnet</td>\n",
-       "      <td>SequencerFeeVault</td>\n",
-       "      <td>0x4200000000000000000000000000000000000011</td>\n",
-       "      <td>1.173184e+03</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>ethereum</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-09-05 16:28:19</td>\n",
-       "      <td>109166261</td>\n",
-       "      <td>op mainnet</td>\n",
-       "      <td>BaseFeeVault</td>\n",
-       "      <td>0x4200000000000000000000000000000000000019</td>\n",
-       "      <td>2.433052e+02</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>ethereum</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-09-05 16:28:19</td>\n",
-       "      <td>109166261</td>\n",
-       "      <td>op mainnet</td>\n",
-       "      <td>L1FeeVault</td>\n",
-       "      <td>0x420000000000000000000000000000000000001A</td>\n",
-       "      <td>3.708429e+03</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>ethereum</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-09-05 16:28:23</td>\n",
-       "      <td>3570978</td>\n",
-       "      <td>base</td>\n",
-       "      <td>SequencerFeeVault</td>\n",
-       "      <td>0x4200000000000000000000000000000000000011</td>\n",
-       "      <td>1.633754e+03</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>ethereum</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023-09-05 16:28:23</td>\n",
-       "      <td>3570978</td>\n",
-       "      <td>base</td>\n",
-       "      <td>BaseFeeVault</td>\n",
-       "      <td>0x4200000000000000000000000000000000000019</td>\n",
-       "      <td>3.486144e+02</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>ethereum</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2023-09-05 16:28:23</td>\n",
-       "      <td>3570978</td>\n",
-       "      <td>base</td>\n",
-       "      <td>L1FeeVault</td>\n",
-       "      <td>0x420000000000000000000000000000000000001A</td>\n",
-       "      <td>1.070815e+03</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>ethereum</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2023-09-05 16:28:27</td>\n",
-       "      <td>3618734</td>\n",
-       "      <td>zora network</td>\n",
-       "      <td>SequencerFeeVault</td>\n",
-       "      <td>0x4200000000000000000000000000000000000011</td>\n",
-       "      <td>1.571624e+02</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>ethereum</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2023-09-05 16:28:27</td>\n",
-       "      <td>3618734</td>\n",
-       "      <td>zora network</td>\n",
-       "      <td>BaseFeeVault</td>\n",
-       "      <td>0x4200000000000000000000000000000000000019</td>\n",
-       "      <td>1.969563e-05</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>ethereum</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2023-09-05 16:28:27</td>\n",
-       "      <td>3618734</td>\n",
-       "      <td>zora network</td>\n",
-       "      <td>L1FeeVault</td>\n",
-       "      <td>0x420000000000000000000000000000000000001A</td>\n",
-       "      <td>1.275109e+02</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>ethereum</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2023-09-05 16:28:31</td>\n",
-       "      <td>2412292</td>\n",
-       "      <td>public goods network</td>\n",
-       "      <td>SequencerFeeVault</td>\n",
-       "      <td>0x4200000000000000000000000000000000000011</td>\n",
-       "      <td>4.973594e+00</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>ethereum</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2023-09-05 16:28:31</td>\n",
-       "      <td>2412292</td>\n",
-       "      <td>public goods network</td>\n",
-       "      <td>BaseFeeVault</td>\n",
-       "      <td>0x4200000000000000000000000000000000000019</td>\n",
-       "      <td>1.759789e-07</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>ethereum</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2023-09-05 16:28:31</td>\n",
-       "      <td>2412292</td>\n",
-       "      <td>public goods network</td>\n",
-       "      <td>L1FeeVault</td>\n",
-       "      <td>0x420000000000000000000000000000000000001A</td>\n",
-       "      <td>2.831558e+00</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>ethereum</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2023-09-05 16:28:38</td>\n",
-       "      <td>2177595</td>\n",
-       "      <td>opbnb</td>\n",
-       "      <td>SequencerFeeVault</td>\n",
-       "      <td>0x4200000000000000000000000000000000000011</td>\n",
-       "      <td>1.087005e+02</td>\n",
-       "      <td>BNB</td>\n",
-       "      <td>bnb</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2023-09-05 16:28:38</td>\n",
-       "      <td>2177595</td>\n",
-       "      <td>opbnb</td>\n",
-       "      <td>BaseFeeVault</td>\n",
-       "      <td>0x4200000000000000000000000000000000000019</td>\n",
-       "      <td>1.177078e-06</td>\n",
-       "      <td>BNB</td>\n",
-       "      <td>bnb</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2023-09-05 16:28:38</td>\n",
-       "      <td>2177595</td>\n",
-       "      <td>opbnb</td>\n",
-       "      <td>L1FeeVault</td>\n",
-       "      <td>0x420000000000000000000000000000000000001A</td>\n",
-       "      <td>2.637086e+01</td>\n",
-       "      <td>BNB</td>\n",
-       "      <td>bnb</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             block_time  block_number            chain_name  \\\n",
-       "0   2023-09-05 16:28:19     109166261            op mainnet   \n",
-       "1   2023-09-05 16:28:19     109166261            op mainnet   \n",
-       "2   2023-09-05 16:28:19     109166261            op mainnet   \n",
-       "3   2023-09-05 16:28:23       3570978                  base   \n",
-       "4   2023-09-05 16:28:23       3570978                  base   \n",
-       "5   2023-09-05 16:28:23       3570978                  base   \n",
-       "6   2023-09-05 16:28:27       3618734          zora network   \n",
-       "7   2023-09-05 16:28:27       3618734          zora network   \n",
-       "8   2023-09-05 16:28:27       3618734          zora network   \n",
-       "9   2023-09-05 16:28:31       2412292  public goods network   \n",
-       "10  2023-09-05 16:28:31       2412292  public goods network   \n",
-       "11  2023-09-05 16:28:31       2412292  public goods network   \n",
-       "12  2023-09-05 16:28:38       2177595                 opbnb   \n",
-       "13  2023-09-05 16:28:38       2177595                 opbnb   \n",
-       "14  2023-09-05 16:28:38       2177595                 opbnb   \n",
-       "\n",
-       "           vault_name                               vault_address  \\\n",
-       "0   SequencerFeeVault  0x4200000000000000000000000000000000000011   \n",
-       "1        BaseFeeVault  0x4200000000000000000000000000000000000019   \n",
-       "2          L1FeeVault  0x420000000000000000000000000000000000001A   \n",
-       "3   SequencerFeeVault  0x4200000000000000000000000000000000000011   \n",
-       "4        BaseFeeVault  0x4200000000000000000000000000000000000019   \n",
-       "5          L1FeeVault  0x420000000000000000000000000000000000001A   \n",
-       "6   SequencerFeeVault  0x4200000000000000000000000000000000000011   \n",
-       "7        BaseFeeVault  0x4200000000000000000000000000000000000019   \n",
-       "8          L1FeeVault  0x420000000000000000000000000000000000001A   \n",
-       "9   SequencerFeeVault  0x4200000000000000000000000000000000000011   \n",
-       "10       BaseFeeVault  0x4200000000000000000000000000000000000019   \n",
-       "11         L1FeeVault  0x420000000000000000000000000000000000001A   \n",
-       "12  SequencerFeeVault  0x4200000000000000000000000000000000000011   \n",
-       "13       BaseFeeVault  0x4200000000000000000000000000000000000019   \n",
-       "14         L1FeeVault  0x420000000000000000000000000000000000001A   \n",
-       "\n",
-       "    alltime_revenue_native gas_token   da_layer is_superchain_registry  \n",
-       "0             1.173184e+03       ETH   ethereum                    yes  \n",
-       "1             2.433052e+02       ETH   ethereum                    yes  \n",
-       "2             3.708429e+03       ETH   ethereum                    yes  \n",
-       "3             1.633754e+03       ETH   ethereum                    yes  \n",
-       "4             3.486144e+02       ETH   ethereum                    yes  \n",
-       "5             1.070815e+03       ETH   ethereum                    yes  \n",
-       "6             1.571624e+02       ETH   ethereum                    yes  \n",
-       "7             1.969563e-05       ETH   ethereum                    yes  \n",
-       "8             1.275109e+02       ETH   ethereum                    yes  \n",
-       "9             4.973594e+00       ETH   ethereum                    yes  \n",
-       "10            1.759789e-07       ETH   ethereum                    yes  \n",
-       "11            2.831558e+00       ETH   ethereum                    yes  \n",
-       "12            1.087005e+02       BNB        bnb                     no  \n",
-       "13            1.177078e-06       BNB        bnb                     no  \n",
-       "14            2.637086e+01       BNB        bnb                     no  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "table at: dune_upload.op_stack_chains_daily_cumulative_revenue\n",
-      "Response status code: 200\n",
-      "Response content: b'{\"success\":true}'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write to Dune Table\n",
     "\n",
     "dune_df = pd.read_csv(file_path)\n",
     "\n",
-    "display(dune_df)\n",
+    "print(dune_df.sample(5))\n",
     "\n",
     "# Write to Dune\n",
     "du.write_dune_api_from_pandas(dune_df, 'op_stack_chains_daily_cumulative_revenue',\\\n",
