--- a/op_chains_tracking/l2_revenue_tracking.ipynb
+++ b/op_chains_tracking/l2_revenue_tracking.ipynb
@@ -47,13 +47,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the method signature hash (this step is optional if you already know the hash)\n",
+    "# Calculate the method signature hash\n",
     "method_signature = \"totalProcessed()\"\n",
     "method_id = Web3.keccak(text=method_signature)[:4].hex()\n",
-    "# Verify the method ID (this step is also optional, but useful for debugging)\n",
-    "print(f\"Method ID: {method_id}\")\n",
-    "\n",
-    "block_number = 1 # replace with your desired block number"
+    "# Verify the method ID\n",
+    "print(f\"Method ID: {method_id}\")"
    ]
   },
   {
