update pulse rate and table name

--- a/op_chains_tracking/l2_revenue_tracking.ipynb
+++ b/op_chains_tracking/l2_revenue_tracking.ipynb
@@ -139,8 +139,8 @@
     "\n",
     "print(dune_df.sample(5))\n",
     "\n",
-    "du.write_dune_api_from_pandas(dune_df, 'op_stack_chains_daily_cumulative_revenue',\\\n",
-    "                             'All-Time (cumulative) revenue for fee vaults on OP Stack Chains. Pulled from RPCs')"
+    "du.write_dune_api_from_pandas(dune_df, 'op_stack_chains_cumulative_revenue_snapshots',\\\n",
+    "                             'Snapshots of All-Time (cumulative) revenue for fee vaults on OP Stack Chains. Pulled from RPCs')"
    ]
   }
  ],
